# ABCA4-faf

./: .gitignore  CODE_OF_CONDUCT.md  README.md  current.md  dataset.xlsx  env.sh  experiment.tsv  faf00_settings.py  faf01_settings_sanity_check.py  faf02_db_tables.py  faf03_load_image_info.py  faf04_load_image_pair_info.py  faf05_img_sanity_checks.py  faf06_disc_macula_ellipse_overlay.py  faf06_img_sanity_checks.py  faf07_blood_vessel_detection.py  faf07_disc_macula_ellipse_overlay.py  faf07_mask_creation.py  faf08_blood_vessel_detection.py  faf08_mask_creation.py  faf09_disc_macula_ellipse_overlay.py  faf11_img_sanity_checks.py  faf12_background_hists.py  faf12_disc_macula_ellipse_overlay.py  faf12_fovea_and_disc_vis.py  faf12_img_recalibration.py  faf13_disc_macula_ellipse_overlay.py  faf13_img_recalibration.py  faf14_background_hists.py  faf15_background_hists.py  faf15_blood_vessel_detection.py  faf15_image_region_composites.py  faf15_mask_creation.py  faf16_mask_creation.py  faf17_mask_creation.py  faf18_hist_progression.py  faf20_pixel_score.py  faf22_roi_histograms.py  faf23_control_histograms.py  faf23_gradient_correction.py  (+20 more)
classes/: faf_analysis.py
doc/: INDIVIDUAL_SCRIPTS.md  PIPELINE.md  faf06_usable_and_sampling_regions.md
faf02_db_loading/: faf0301_load_image_info.py  faf0305_load_faf123_label.py
faf03_db_loading/: .~lock.image_pairs.tsv#  faf0301_load_image_info.py  faf0303_load_image_pair_info.py  faf0305_load_faf123_label.py  faf0306_update_device_dilation.py
faf03_image_qc/: 02_periodicity.py  03_tiffinfo.py
faf04_manual_preproc/: faf0401_disc_n_fovea_read_from_img.py  faf0901_disc_n_fovea_read_from_img.py
faf05_image_qc/: brisque_distros.gplt  faf0503_tiffinfo.py  faf0504_plot_brisque.py  faf0509_pixel_vs_brisque.py  faf0510_acquired_vs_brisque.py  faf0510_pixels_per_ellipse.py  faf0512_acquired_vs_brisque.py  faf0513_acquired_vs_brisque_table.py
faf08_auto_preproc/: faf0801_find_clean_view_imgs.py  faf0804_img_denoising.py  faf0805_img_recalibration.py  faf0808_fovea_n_disc_location.py  faf0810_auto_bg_regions.py  faf0812_usable_region_hists.py  faf0815_blood_vessel_detection.py  faf0824_vasculature_hull.py
faf08_automatable/: faf0801_find_clean_view_imgs.py  faf0802_auto_usable_regions.py  faf0804_img_denoising.py  faf0805_img_recalibration.py  faf0808_auto_bg_regions.py  faf0808_fovea_n_disc_location.py  faf0810_auto_bg_regions.py  faf0812_usable_region_hists.py  faf0815_blood_vessel_detection.py  faf0824_vasculature_hull.py  faf0825_fovea_n_disc_location.py  faf0830_manual_vs_optos_location.py  fovea_estimates.tsv
faf09_automatable/: faf0801_find_clean_view_imgs.py  faf0803_vasculature_hull.py  faf0805_fovea_n_disc_location.py  faf0808_auto_bg_regions.py
faf09_manual_preproc/: faf0901_disc_n_fova_read_from_img.py  manual_labeliing.md
faf10_automatable/: auto_labelling.md  faf0810_load_optos_locations.py  faf1001_find_clean_view_imgs.py  faf1002_auto_bg_regions.py  faf1002_auto_usable_regions.py  faf1003_auto_bg_regions.py  faf1003_img_recalibration.py  faf1005_usable_region_hists.py  faf1024_vasculature_hull.py  faf1025_fovea_n_disc_location.py
faf10_image_qc/: README.md  faf1003_tiffinfo.py  faf1005_ONH_gallery.py  faf1007_pixel_gallery.py  faf1008_store_brisque.py  faf1009_pixel_vs_brisque.py  faf1010_pixels_per_ellipse.py  faf1011_pixel_ct_hist.py  faf1012_acquired_vs_brisque.py
faf28_workflows/: cli.py  config.py  faf2801_single_image_wf.py
faf30_production/: faf3000_names_and_dates_list.py  faf3000_score_vs_time_plot.py  faf3001_score_vs_time_plot.py  faf3002_score_sensitivity_to_fovea_location.py  faf3003_resampling.py  faf3005_score_od_vs_os_plot.py  faf3006_score_comparison.py  faf3008_hist_progression.py  faf3010_image_region_composites.py  faf3012_dataset_overview.py  faf3016_case_catalog.py  faf3020_ONH_gallery.py  stats.tex
faf_classes/: faf_analysis.py
junkyard/: control_renaming_hack.py  control_renaming_hack_2.py  faf26_pixel_score_exercise.py
models/: abca4_faf_models.py  abca4_results.py  abca4_special_tables.py
src/: .~lock.age_matched_pairs.pdf#  faf00_settings.py  faf01_settings_sanity_check.py  faf02_db_tables.py  faf11_img_sanity_checks.py  faf12_fovea_and_disc_vis.py  faf13_plain_OS_OD_catalog.py  faf14_img_annot_composites.py  faf15_background_hists.py  faf17_mask_creation.py  faf22_roi_histograms.py  faf23_gradient_correction.py  (+2 more)
utils/: io.py  (+13 more)
(+107 files in other folders)
